--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-sitemap": "^0.8.2"
   },
   "scripts": {
     "dev": "vite",
